# KanbanBoard

./: .env.example  .gitignore  docker-compose.yml
backend/: Dockerfile  nodemone.json  package-lock.json  package.json
backend/src/: app.js  server.js
backend/src/config/: logger.js
backend/src/controllers/: authController.js  boardController.js  taskController.js
backend/src/middleware/: Subscription.js  auth.js
backend/src/models/: Board.js  Subscription.js  Task.js  User.js
backend/src/routes/: auth.js  boards.js  logs.js  tasks.js
backend/src/services/: api.js
cpp-microservice/: CMakeLists.txt  Dockerfile
cpp-microservice/include/: prioritizer.h  task.h
cpp-microservice/src/: main.cpp  prioritizer.cpp  task.cpp
database/seeds/: seed_data.js
frontend/: Dockerfile  package-lock.json  package.json  tailwind.config.js
frontend/public/: index.html  manifest.json
frontend/src/: App.css  App.js  index.js
frontend/src/components/Analytics/: BurnDownChart.js  FilterComponent.js  MetricCard.js  TaskDidtributionChart.js  VelocityChart.js
frontend/src/components/Auth/: Login.js  Register.js
frontend/src/components/Board/: Boadviewcss.css  BoardHeader.js  KanbanColumn.css  KanbanColumn.js  Sidebar.js  TaskCard.js  TaskForm.js
frontend/src/components/Store/: BoardSlice.js  authSlice.js  index.js  taskSlice.js  (+1 more)
frontend/src/contexts/: AuthContext.js
frontend/src/pages/: Analytics.js  BoardView.js  Home.js  Register.js
frontend/src/services/: api.js  logger.js  socket.js
frontend/src/workers/: boardworkers.js
scripts/: seed_db.sh
(+5 files in other folders)
